formating, L36-nio